@startuml

class Permission {
  +string name
  +?int id
  +hydrate(array $data)
  +getFillable()
}

Permission --> Model

class Model {
  +?int id
  +hydrate(array $data)
  +getFillable()
}

class Role {
  +string name
  +?int id
  +hydrate(array $data)
  +getFillable()
}

Role --> Model

class User {
  +string username
  +string email
  +string password
  +?string remember_token
  +?string reset_token
  +?string reset_expires_at
  +?string created_at
  +DateTime updated_at
  +?int id
  +hydrate(array $data)
  +getFillable()
}

User --> Model

@enduml
